--- a/src/AboutPage.html
+++ b/src/AboutPage.html
@@ -68,7 +68,7 @@
           </ul>
         </div>
         <div class="give-feedback-about-container">
-          <h4>Give us Feeback By Clicking <u>Here</u></h4>
+          <h4>Give us Feeback By Clicking <a href="feedback.html"><u>Here</u> </a></h4>
         </div>
       </div>
 
