updated about page from pixels to %

--- a/src/AboutPage.html
+++ b/src/AboutPage.html
@@ -41,7 +41,6 @@
           understand the underlying mechanics of AI.</p>
         </div>
         <div class="how-to-play-container">
-         <p>THIS IS HOW TO PLAY !</p>
          <ul>
           <li>Choose an AI Difficulty Level</li>  
           <li>Start a New Game</li>  
@@ -56,7 +55,7 @@
       </div>
 
       <div class="meet-the-team-container">
-        <h3>MEET THE TEAM:</h3>
+        <h3>MEET THE TEAM</h3>
         <div class="meet-the-team-inner-container">
           <ul>
             <li>Nicholas Persley - Manager/Back-End </li>
@@ -68,7 +67,7 @@
           </ul>
         </div>
         <div class="give-feedback-about-container">
-          <h4>Give us Feeback By Clicking <a href="feedback.html"><u>Here</u> </a></h4>
+          <h4>Give us Feeback By Clicking <u>Here</u></h4>
         </div>
       </div>
 
