--- a/src/game.html
+++ b/src/game.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css.css" />
   <link rel="stylesheet" href="checkers.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="index.js" defer></script>
+  <script src="pieces.js"></script>
   <title>BubbleBots</title>
 </head>
 <body>
@@ -21,78 +24,7 @@
       </nav>
     </header>
 
-    <div class="container">
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
-        <div class="box second-color"></div>
-        <div class="box first-color"></div>
+    <div id="gameboard">
     </div>
 
     <div class ="textExplanation">
