Revert "Create About and Feedback Page"

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <body>
     <header class="header">
       <a href="index.html">
-        <img src="logo.png" alt="logo" width= "8%" height= "8%" />
+        <img src="logo.png" alt="logo" width="120" height="120" />
       </a>
 
       <nav>
         <ul>
           <style>
             a {
-              font-size: 20px;
+              font-size: 40px;
             }
           </style>
           <li><a href="index.html">Home</a></li>
@@ -26,7 +26,8 @@
     </header>
 
     <main>
-     
+      <div class="background-container">
+        <img src="download.jpg" alt="background" />
         <div class="centered-text">
           <h1>Welcome to BubbleBots</h1>
           <p>
@@ -39,9 +40,3 @@
     </main>
   </body>
 </html>
-
-<style>
-body {
-  background-image: url('background.png');
-}
-</style>
