--- a/src/game.html
+++ b/src/game.html
@@ -3,25 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="checkers.css">
   <link rel="stylesheet" href="styles.css.css" />
-  
+  <link rel="stylesheet" href="checkers.css">
   <title>BubbleBots</title>
 </head>
 <body>
   <body style="background-color:tan;">
-   <header class="header">
+    <header class="header">
       <a href="index.html">
-        <img src="logo.png" alt="logo" width= "8%" height= "8%" />
-      </a>
-
+        <img src="logo.jpeg" alt="logo" width="8%" height="8%"
+      /></a>
       <nav>
         <ul>
-          <style>
-            a {
-              font-size: 20px;
-            }
-          </style>
           <li><a href="index.html">Home</a></li>
           <li><a href="AboutPage.html">About</a></li>
         </ul>
@@ -29,7 +22,6 @@
     </header>
 
     <div class="container">
-	
         <div class="box first-color"></div>
         <div class="box second-color"></div>
         <div class="box first-color"></div>
