--- a/src/game.html
+++ b/src/game.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="styles.css.css" />
   <link rel="stylesheet" href="checkers.css">
   <link rel="stylesheet" href="style.css">
-  <script src="index.js" defer></script>
-  <script src="pieces.js"></script>
+  <script src="gameboard_dev/index.js" defer></script>
+  <script src="gameboard_dev/pieces.js"></script>
   <title>BubbleBots</title>
 </head>
 <body>
