Correct merge troubles

--- a/src/AboutPage.html
+++ b/src/AboutPage.html
@@ -31,7 +31,7 @@
         <h2>HOW TO PLAY</h2>
       </div>
 
-      
+
       <div class="about-flex-container">
         <div class="about-us-container">
         <p>Bubble Bots is a web-based application that allows students, gamers, and developers to challenge AI in checkers. While doing so, you can see what it’s
@@ -42,14 +42,14 @@
         </div>
         <div class="how-to-play-container">
          <ul>
-          <li>Choose an AI Difficulty Level</li>  
-          <li>Start a New Game</li>  
-          <li>Make your Move</li>  
+          <li>Choose an AI Difficulty Level</li>
+          <li>Start a New Game</li>
+          <li>Make your Move</li>
           <li>Wait for AI's Turn</li>
-          <li>Continue Alternating Turns with the AI</li>  
+          <li>Continue Alternating Turns with the AI</li>
           <li>Game Ends when Player Captures All the Pieces From the Opponent (Playet to AI, vise versa)</li>
-          <li>Look at the Text Explanation (IN PROGRESS!) to see the AI's Thought Process</li> 
-          <li>Look at the Text Visualization (IN PROGRESS!) to see</li> 
+          <li>Look at the Text Explanation (IN PROGRESS!) to see the AI's Thought Process</li>
+          <li>Look at the Text Visualization (IN PROGRESS!) to see</li>
          </ul>
         </div>
       </div>
@@ -67,7 +67,7 @@
           </ul>
         </div>
         <div class="give-feedback-about-container">
-          <h4>Give us Feeback By Clicking <u>Here</u></h4>
+          <h4>Give us Feedback By Clicking <a href="feedback.html"><u>Here</u></a></h4>
         </div>
       </div>
 
