--- a/src/game.html
+++ b/src/game.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="checkers.css">
+  <link rel="stylesheet" href="styles.css.css">
   <link rel="stylesheet" href="style.css">
-  <script src="gameboard_dev/index.js" defer></script>
+  <script src="board.js" defer></script>
   <title>BubbleBots</title>
 </head>
 <body>
