Fixed feedback.html and added css

--- a/src/feedback.html
+++ b/src/feedback.html
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-
+        <center><h2>Please give us your feedback here!</h2><center>
         <form method="POST">
           <label for"mail" style="color:gold;">Email:</label></br>
           <input type="text" id="mail" name="mail" placeholder="name@email.com"></input></br>
@@ -34,7 +34,7 @@
           <label for"feedback" style="color:gold;" >Feedback:</label></br>
           <textarea type="text" id="feedback" name="feedback" placeholder="please write your feedback here" ></textarea></br>
 
-          <input type="submit" class="button" onclick="alert('Thank you for the feedback!')" value="SUBMIT" />
+          <input type="submit" class="feedback_button" onclick="alert('Thank you for the feedback!')" value="SUBMIT" />
         </form>
 
           </main>
@@ -46,6 +46,10 @@
 
 body {
   background-image: url('background.png');
+}
+
+h2{
+    color: Gold;
 }
 </style>
 
