Added explanation ability
I added the ability to give explanations for the bot's actions. I had to make some changes to make the explanation box visible, as the settings box hid it (these changes are to do with the range sliders, as I had to reduce their height to show the box). Since the settings box is now smaller, the tooltips covered the setting names, so I made them invisible until a user hovers over their sliders

--- a/src/game.html
+++ b/src/game.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class ="textExplanation">
-        <p>This is where the Text Explanation will be </p>
+      <p>This is where the Text Explanation will be </p>
     </div>
 
 
@@ -42,7 +42,7 @@
     <div class ="settings">
       <p>Settings </settings>
       
-      <div class = "game diff">
+      <div class = "game_diff">
         <p>Game Difficulty</p>
         <!-- Slider Start 1 -->
         <div class="range-slider">
@@ -59,7 +59,7 @@
         <!-- Slider End 1 -->
       </div>
 
-      <div class = "Verbosness">
+      <div class = "Verboseness">
         <p>Verboseness</p>
         <!-- Slider Start 2 -->
         <div class = "range-slider">
@@ -76,7 +76,7 @@
         <!-- Slider End 2 -->
       </div>
 
-      <div class = "Explanation Speed">
+      <div class = "ExplanationSpeed">
         <p>Explanation Speed</p>
         <!-- Slider Start 3 -->
         <div class = "range-slider">
