converted px to rem, and updated font size

--- a/src/AboutPage.html
+++ b/src/AboutPage.html
@@ -9,13 +9,14 @@
   <body>
     <header class="header">
       <a href="index.html">
-        <img src="logo.png" alt="logo" width="110" height="110"
-      /></a>
+        <img src="logo.png" alt="logo" width= "8%" height= "8%" />
+      </a>
+
       <nav>
         <ul>
           <style>
             a {
-              font-size: 40px;
+              font-size: 1.25rem;
             }
           </style>
           <li><a href="index.html">Home</a></li>
@@ -60,7 +61,7 @@
           <ul>
             <li>Nicholas Persley - Manager/Back-End </li>
             <li>Nicholas Robishaw - Presenter/Front & Back-End</li>
-            <li>Zamora-Rivera - Minute-Taker/Front-End</li>
+            <li>Elian Zamora-Rivera - Minute-Taker/Front-End</li>
             <li>Jeysen Angous - Minute-Taker/Front-End</li>
             <li>Tyler Chapp - Quality-Assurance/Back-End</li>
             <li>Ibrahim Hmood - Presenter/Back-End</li>
@@ -73,17 +74,17 @@
 
     </main>
   </head>
+  </body>
   <footer>
     <div class = "footer">Copyright &copy; 2023 BubbleBots</div>
 
     <div class="footer-right">
       <a href="https://github.com/N1ckP3rsl3y/TheBubbleBots">
-        <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU" alt="github logo" width="100" height="100">
+        <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU" alt="github logo" width="40" height="40">
       </a>
     </div>
 
   </footer>
-  </body>
   <style>
     body {
       background-image: url('background.png');
