--- a/src/feedback.html
+++ b/src/feedback.html
@@ -42,6 +42,16 @@
       </div>
     </main>
   </body>
+  <footer>
+    <div class = "footer">Copyright &copy; 2023 BubbleBots</div>
+
+    <div class="footer-right">
+      <a href="https://github.com/N1ckP3rsl3y/TheBubbleBots">
+        <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU" alt="github logo" width="40" height="40">
+      </a>
+    </div>
+
+  </footer>
 <style>
 
 body {
