--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <ul>
           <style>
             a {
-              font-size: 20px;
+              font-size: 1.25rem;
             }
           </style>
           <li><a href="index.html">Home</a></li>
@@ -38,6 +38,17 @@
       </div>
     </main>
   </body>
+
+  <footer>
+    <div class = "footer">Copyright &copy; 2023 BubbleBots</div>
+
+    <div class="footer-right">
+      <a href="https://github.com/N1ckP3rsl3y/TheBubbleBots">
+        <img src="https://play-lh.googleusercontent.com/PCpXdqvUWfCW1mXhH1Y_98yBpgsWxuTSTofy3NGMo9yBTATDyzVkqU580bfSln50bFU" alt="github logo" width="40" height="40">
+      </a>
+    </div>
+
+  </footer>
 </html>
 
 <style>
